--- a/src/stylesheets/header.scss
+++ b/src/stylesheets/header.scss
@@ -1,9 +1,10 @@
-.navbar-brand {
-  img {
-    display: inline;
-    height: 25px;
-    margin-right: 10px;
-    margin-top: -5px;
+@if variable-exists(logo) {
+  .navbar-brand {
+    background-image: $logo;
+    background-repeat: no-repeat;
+    background-size: 30px;
+    background-position: 15% center;
+    padding-left: 60px;
   }
 }
 
@@ -13,4 +14,8 @@
       cursor: pointer;
     }
   }
+}
+
+.search {
+  margin-right: 10px;
 }
