New open ebooks colors.

--- a/src/themes/openebooks.scss
+++ b/src/themes/openebooks.scss
@@ -1,8 +1,8 @@
-$darkgreen: #3d5416;
-$lightgreen: #75a12b;
-$gray: #eeeeee;
-$light: #f2ffff;
-$dark: #383b43;
+$darkgreen: #497049;
+$lightgreen: #497049;
+$gray: #EBF7EB;
+$light: #F2FFF2;
+$dark: #535753;
 
 $focuscolor: orange;
 $pagecolor: $light;
