Added login with clever and moved configuration to a file.

--- a/src/themes/openebooks.scss
+++ b/src/themes/openebooks.scss
@@ -21,3 +21,4 @@ $invertedlinkvisitedcolor: darken($invertedlinkcolor, 10%);
 $logo: url('openebooks-logo.png');
 
 @import "../stylesheets/app.scss";
+@import "./openebooks_login_buttons.scss";
