Changed book details to show app info for borrowed books, and hide download buttons and copies/holds info.

--- a/src/stylesheets/app.scss
+++ b/src/stylesheets/app.scss
@@ -1,4 +1,5 @@
 @import "node_modules/opds-web-client/lib/stylesheets/app.scss";
+@import "book_details";
 @import "book_details_container";
 @import "confirmation_popup";
 @import "footer";
