Added support for mutliple library catalogs from a registry, and moved configuration to be read dynamically from the circulation manager instead of config files.

--- a/src/stylesheets/header.scss
+++ b/src/stylesheets/header.scss
@@ -1,11 +1,9 @@
-@if variable-exists(logo) {
-  .navbar-brand {
-    background-image: $logo;
-    background-repeat: no-repeat;
-    background-size: 30px;
-    background-position: 10% center;
-    padding-left: 60px;
-  }
+.navbar-brand.with-logo {
+  background-image: var(--logo);
+  background-repeat: no-repeat;
+  background-size: 40px;
+  background-position: 4% center;
+  padding-left: 60px;
 }
 
 .navbar {
