--- a/src/stylesheets/app.scss
+++ b/src/stylesheets/app.scss
@@ -1,3 +1,18 @@
+$pagecolor: var(--pagecolor);
+$pagecolorlight: var(--pagecolorlight);
+$footercolor: var(--footercolor);
+
+$pagetextcolor: var(--pagetextcolor);
+$pagetextcolorlight: var(--pagetextcolorlight);
+$highlightcolor: var(--highlightcolor);
+
+$linkcolor: var(--linkcolor);
+$linkvisitedcolor: var(--linkvisitedcolor);
+$linkhovercolor: var(--linkhovercolor);
+
+$transparentpagecolor: var(--transparentpagecolor);
+$semitransparentpagecolor: var(--semitransparentpagecolor);
+
 @import "node_modules/opds-web-client/lib/stylesheets/app.scss";
 @import "book_details";
 @import "book_details_container";
@@ -5,3 +20,8 @@
 @import "footer";
 @import "header";
 @import "report_problem_form";
+
+/* Wrapper div that sets CSS variables also needs full height. */
+body > div > div {
+  height: 100%;
+}
