--- a/src/stylesheets/header.scss
+++ b/src/stylesheets/header.scss
@@ -7,12 +7,42 @@
 }
 
 .navbar {
-  min-height: $headerHeight;
+
+  border-radius: 0;
+  min-height: 150px;
+
   li {
     a {
       cursor: pointer;
     }
   }
+
+  .container-fluid {
+    height: 100%;
+    padding: 0;
+  }
+
+  .navbar-header {
+    background: $background;
+    height: 100%;
+    max-width: 200px;
+    padding: 20px;
+    text-align: center;
+  }
+
+  .navbar-brand {
+    margin: 0 !important;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+    padding: 0;
+    line-height: 1;
+  }
+
+}
+
+.navbar, .navbar-collapse {
+  background: white;
 }
 
 .search {
