begin book details dev

--- a/src/stylesheets/app.scss
+++ b/src/stylesheets/app.scss
@@ -16,14 +16,14 @@ $linkhovercolor: var(--linkhovercolor);
 $transparentpagecolor: var(--transparentpagecolor);
 $semitransparentpagecolor: var(--semitransparentpagecolor);
 
-@import "node_modules/opds-web-client/lib/stylesheets/app.scss";
-@import "book_details";
-@import "book_details_container";
+// @import "node_modules/opds-web-client/lib/stylesheets/app.scss";
+// @import "book_details";
+// @import "book_details_container";
 @import "confirmation_popup";
 @import "footer";
 @import "header";
 @import "report_problem_form";
-@import "overrides";
+// @import "overrides";
 
 /* Wrapper div that sets CSS variables also needs full height. */
 body > div > div {
