--- a/src/stylesheets/app.scss
+++ b/src/stylesheets/app.scss
@@ -16,7 +16,7 @@ $linkhovercolor: var(--linkhovercolor);
 $transparentpagecolor: var(--transparentpagecolor);
 $semitransparentpagecolor: var(--semitransparentpagecolor);
 
-// @import "node_modules/opds-web-client/lib/stylesheets/app.scss";
+@import "node_modules/opds-web-client/lib/stylesheets/app.scss";
 // @import "book_details";
 // @import "book_details_container";
 @import "confirmation_popup";
