book details init

--- a/src/stylesheets/app.scss
+++ b/src/stylesheets/app.scss
@@ -1,4 +1,3 @@
-
 $background: #343434;
 
 $pagecolor: var(--pagecolor);
@@ -18,13 +17,13 @@ $semitransparentpagecolor: var(--semitransparentpagecolor);
 
 // css reset
 @import "normalize";
-@import "node_modules/opds-web-client/lib/stylesheets/app.scss";
+// @import "node_modules/opds-web-client/lib/stylesheets/app.scss";
 // @import "book_details";
 // @import "book_details_container";
-@import "confirmation_popup";
-@import "footer";
-@import "header";
-@import "report_problem_form";
+// @import "confirmation_popup";
+// @import "footer";
+// @import "header";
+// @import "report_problem_form";
 // @import "overrides";
 
 /* Wrapper div that sets CSS variables also needs full height. */
